Criando dois testes